--- a/quicksnapr/static/index.html
+++ b/quicksnapr/static/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Take your profile photo using your webcam</title>
-  <link rel="stylesheet" href="styles/application.css">
+  <link rel="stylesheet" href="/styles/application.css">
   <link rel=icon href="favicon.ico" />
 </head>
 <body>
@@ -14,7 +14,7 @@
   </header>
   <section class="cf">
     <div id="container">
-      <video poster="no-support.png"  autoplay>
+      <video poster="/images/no-support.png"  autoplay>
       </video>
       <canvas style="display:none"></canvas>
     </div>
