--- a/quicksnapr/static/index.html
+++ b/quicksnapr/static/index.html
@@ -21,12 +21,12 @@
       <canvas style="display:none"></canvas>
     </div>
     <section id="control" class="cf">
-      <button id="capture" class="btn share">Capture</button>
       <div id="snaps">
         <!-- add screencaps -->
       </div>
+      <button id="capture" class="btn share">Capture</button>
       <div id="actions">
-        <span class="action" id="save">Save</span>
+        <a class="action" id="save" href="" download="quicksnapr.png">Save</a>
         <span class="action delete" id="delete">Delete</span>
       </div>
     </section>
