Adding fallback camera support

--- a/quicksnapr/static/index.html
+++ b/quicksnapr/static/index.html
@@ -9,8 +9,10 @@
 <body>  
   <div id="root">
     <div id="container">
-      <video poster="/images/no-support.png" id="camerastream"  autoplay>
-      </video>
+      <video poster="/images/no-support.png" id="camerastream" autoplay></video>
+      <div id="fallbackcamera" style="display:none;">
+        <input type=file accepts="image/*" camera id="camerainput">        
+      </div>
       <canvas style="display:none"></canvas>
     </div>
     <section id="control" class="cf">
