Fixing some styles, 3d and other stuff'

--- a/quicksnapr/static/index.html
+++ b/quicksnapr/static/index.html
@@ -11,7 +11,7 @@
     <div id="container">
       <video poster="/images/no-support.png" id="camerastream" autoplay></video>
       <div id="fallbackcamera" style="display:none;">
-        <input type=file accepts="image/*" camera id="camerainput">        
+        <input type=file accept="image/*" capture="camera" id="camerainput">        
       </div>
       <canvas style="display:none"></canvas>
     </div>
